--- a/calls/12-5-2014.md
+++ b/calls/12-5-2014.md
@@ -10,9 +10,9 @@ Todo:
   	- Get example sponsorship emails
   	- Find at least 5 venues with contact emails
   - Gemma
-  	- Find at least 10 venues with contact emails
+  	
   	- Find 15 sponsors
-  	- Start writing through the walktrhough experience before the tuesday meeting
+  	- Start writing through the walkthrough experience before the tuesday meeting
   - Benjamin
   	- Find at least 5 venues with contect emails
   	- move into markdown
